fix spacing

--- a/style.css
+++ b/style.css
@@ -278,6 +278,7 @@ p {
   
   .section {
     max-height: unset;
+    min-height: unset;
     overflow-y: unset;
     padding: 0 1.5em;
     margin: 1em 0;
@@ -290,6 +291,7 @@ p {
   .section-right {
     flex: 1 0 100%;
     padding: 0 1em;
+    
   }
 
   .thoma-logo {
@@ -313,6 +315,12 @@ p {
   .exhibition-title {
     font-size: clamp(1.75rem, 5vmin, 2.25rem);
     margin-top: 2.5em;
+  }
+
+  .category-menu {
+    margin: 4em 0;
+    margin-bottom: 2em;
+    width: 90%;
   }
 
   .entry {
